--- a/program2.html
+++ b/program2.html
@@ -5,10 +5,10 @@
 	</head>
 	
 	<body>
-		<p><h3>IARTĂ, CĂ NU-I GREU!</h3></p>
+		<p style="text-align:center;"><h3>IARTĂ, CĂ NU-I GREU!</h3></p>
 		<p><hr style="height:12px; background:#ff0000;"></p>
 		<div style="font-family:'Arial';">
-			<p style="text-align:center;">
+			<p>
 				Când un frate îți greșește </br>
 				Răscolind sufletul tău, </br>
 				Ia-l în brațe și-i zâmbește </br>
