--- a/program2.html
+++ b/program2.html
@@ -5,7 +5,7 @@
 	</head>
 	
 	<body>
-		<p style="text-align:center;"><h3>IARTĂ, CĂ NU-I GREU!</h3></p>
+		<p><h3 style="text-align:center;">IARTĂ, CĂ NU-I GREU!</h3></p>
 		<p><hr style="height:12px; background:#ff0000;"></p>
 		<div style="font-family:'Arial';">
 			<p>
